2006-08-11  Inge Wallin  <inge@lysator.liu.se>

	Only show checkboxes in config dialog if applicable.
	* kchart_params.h (KChartParams::part): new method
	* kchartDataConfigPage.cc: Only show the checkboxes "First row/col
	as headers" if we have external data.

2006-08-06  Inge Wallin  <inge@lysator.liu.se>

	Disable "First row/col as label in the data editor.
	* kchartDataEditor.cc (kchartDataEditor): Disable checkboxes
	
2006-08-04  Inge Wallin  <inge@lysator.liu.se>

	Let the Data Editor use icons for it's buttons.
	* kchartDataEditor.cc (kchartDataEditor): Make the insert / delete
	row / col buttons show an icon instead of text.
	* kchartDataEditor.cc (addDocs): Add ToolTips to the buttons.

2006-07-18  Inge Wallin  <inge@lysator.liu.se>

	Clean up the data editor and fix bug 129553: kchart: crash / heavy
	load with Row=0 in KChart Data Editor
	* kchartDataEditor.{h,cc} (currentChanged): New method
	(m_insertRowButton, m_removeRowButton, m_insertRowButton,
	  m_removeRowButton): New members
	* kchartDataEditor.cc (removeCurrentRow, removeCurrentCol): Don't
	allow to remove a row or column if it's the first column or if
	there are only 2 of them.

	Some small cleaning.
	
2006-07-17  Inge Wallin  <inge@lysator.liu.se>

	Add "first row/col as legend" checkboxes to data editor.
	* kchartDataEditor.cc (kchartDataEditor): Enable existing code
	* kchartDataEditor.cc (setData): Enable existing code
	* kchartDataEditor.cc (getData): Enable existing code

	Simplify paintContent():
	* kchart_part.{h,cc} (createLabelsAndLegend): New function
	(paintContent): call createLabelsAndLegend

	================================================================
	KChart 1.5 released

	<There are a lot of missed entries here.>

	
2005-09-15  Inge Wallin  <inge@lysator.liu.se>

	Fix bug 108770: [PATCH] kchart should have a format menu
	* kchart.rc (Format): New menu
	(KChartTypes toolbar): place to the left
	* kchart_view.cc (KChartView::KChartView): change strings for some
	actions.
